--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -5,5 +5,7 @@
   "USAGE": "USAGE",
   "OPTIONS": "OPTIONS",
   "EXAMPLES": "EXAMPLES",
-  "FORMORE": "For more info, run any command with the `--help` flag:"
+  "FORMORE": "For more info, run any command with the `--help` flag:",
+  "help": "Display this help message",
+  "version": "Display this version"
 }
